--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -80,6 +80,8 @@
         <script type="text/javascript" src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
         <script type="text/javascript" src="bower_components/angular-social/angular-social.js"></script>
         <script type="text/javascript" src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
+        <script type="text/javascript" src="bower_components/ng-cordova/ng-cordova.js"></script>
+        <script type="text/javascript" src="bower_components/angular-local-storage/angular-local-storage.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/filters/linky.js"></script>
         <script type="text/javascript" src="js/services/user.js"></script>
