--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -17,11 +17,11 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                     <ul class="nav navbar-nav visible-lg visible-md hidden-sm hidden-xs" >
-                        <li> <a class="navbar-brand" href="#/">  <img alt="Brand" src="img/logo.png" >         </a></li>
-                        <li><a href="#/top/">{{ 'POPULAR' | translate}}</a></li>
-                        <li ng-show="user"><a href="#/profile/{{user._id}}/stories">{{ 'MY_PEETCHS' | translate}}</a></li>
-                        <li><a href="#/">{{ 'RECENT' | translate}}</a></li>
-                        <li ng-show="user"><a href="#/create/" class="nav-important">{{ 'CREATE' | translate}}</a></li>
+                        <li><a class="navbar-brand" href="#/">  <img alt="Brand" src="img/logo.png" ></a></li>
+                        <li><a href="#/top/" ng-bind="'POPULAR' | translate"></a></li>
+                        <li ng-show="user"><a href="#/profile/{{user._id}}/stories" ng-bind="'MY_PEETCHS' | translate"></a></li>
+                        <li><a href="#/" ng-bind="'RECENT' | translate"></a></li>
+                        <li ng-show="user"><a href="#/create/" class="nav-important" ng-bind="'CREATE' | translate"></a></li>
                     </ul>
                     <ul class="nav navbar-nav visible-xs visible-sm hidden-md hidden-lg">
                         <li> <a class="navbar-brand" href="#/">  <img alt="Brand" src="img/logo-small.png" >         </a></li>
@@ -38,17 +38,19 @@
                             <i class="glyphicon glyphicon-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                        <li><a href="#/profile">{{ 'PROFILE' | translate}}</a></li>
-                        <li><a href="#/friends">{{ 'FRIENDS' | translate}}</a></li>
-                        <li><a href="#/profile/notifications">{{ 'NOTIFICATIONS' | translate}} <span class="badge" ng-show="newNotifs.length>0">{{newNotifs.length}}</span></a></li>
+                        <li><a href="#/profile" ng-bind="'PROFILE' | translate"></a></li>
+                        <!--<li><a href="#/friends" >{{ 'FRIENDS' | translate}}</a></li>-->
+                        <li><a href="#/profile/notifications" ng-bind="'NOTIFICATIONS' | translate"><span class="badge" ng-show="newNotifs.length>0">{{newNotifs.length}}</span></a></li>
                         <li class="divider"></li>
-                        <li><a href="#/" ng-click="logout()">{{ 'LOGOUT' | translate}}</a></li>
+                        <li><a href="#/" ng-click="logout()" ng-bind="'LOGOUT' | translate"></a></li>
                       </ul>
                     </li>
-                    <li><a href="#/login/" class="nav-important visible-lg visible-md hidden-sm hidden-xs" ng-show="!user">{{ 'LOGIN' | translate}}</a></li>
-                    <li><a href="#/signup/" class="nav-important visible-lg visible-md hidden-sm hidden-xs"  ng-show="!user">{{ 'SIGNUP' | translate}}</a></li>
+                    <li><a href="#/login/" class="nav-important visible-lg visible-md hidden-sm hidden-xs" ng-show="!user" ng-bind="'LOGIN' | translate"></a></li>
+                    <li><a href="#/signup/" class="nav-important visible-lg visible-md hidden-sm hidden-xs"  ng-show="!user" ng-bind="'SIGNUP' | translate"></a></li>
                     <li><a href="#/login/" class="nav-important visible-xs visible-sm hidden-md hidden-lg" ng-show="!user"><i class="glyphicon glyphicon-log-in"></i></a></li>
                     <li><a href="#/signup/" class="nav-important visible-xs visible-sm hidden-md hidden-lg"  ng-show="!user"><i class="glyphicon glyphicon-user"></i></a></li>
+                    <li class="no-margin"><a href="" class="visible-lg visible-md hidden-sm hidden-xs " ng-click="changeLanguage('en')" >EN</a></li>
+                    <li class="no-margin"><a href="" class=" visible-lg visible-md hidden-sm hidden-xs " ng-click="changeLanguage('fr')" >FR</a></li>
                 </ul>
             </div>
         </nav>
@@ -58,12 +60,14 @@
         </div>
         <div class="col-lg-2 col-md-2 hidden-sm hidden-xs side">
             <div class="col-md-12 support">
-                <h3>{{ 'ALPHA' | translate}}</h3>
-                <p>{{ 'FEEDBACK' | translate}}</p>
-                <a href="mailto:contact@peetch.co">{{ 'SEND_MAIL' | translate}}</a>
+                <h3 ng-bind="'ALPHA' | translate"></h3>
+                <p ng-bind="'FEEDBACK' | translate"></p>
+                <a href="mailto:contact@peetch.co" ng-bind="'SEND_MAIL' | translate"></a>
             </div>
-            <img src="img/side-banner.png"/>
-            <img src="img/side-banner2.png"/>
+            <img src="img/side-banner.png" ng-show="lang=='fr'"/>
+            <img src="img/side-banner2.png" ng-show="lang=='fr'"/>
+            <img src="img/side-bannerEnglish.png" ng-show="lang=='en'"/>
+            <img src="img/side-banner2English.png" ng-show="lang=='en'"/>
         </div>
         <div class="col-md-6 col-md-offset-2 col-xs-10 col-xs-offset-1 footer">
             <a href="" ng-click="changeLanguage('en')">English</a> • <a href="" ng-click="changeLanguage('fr')">Français</a>
@@ -80,8 +84,6 @@
         <script type="text/javascript" src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
         <script type="text/javascript" src="bower_components/angular-social/angular-social.js"></script>
         <script type="text/javascript" src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
-        <script type="text/javascript" src="bower_components/ng-cordova/ng-cordova.js"></script>
-        <script type="text/javascript" src="bower_components/angular-local-storage/angular-local-storage.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/filters/linky.js"></script>
         <script type="text/javascript" src="js/services/user.js"></script>
